# mesh-voxeliser

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  readme.md
include/: Box.h  Intersectable.h  Mesh.h  Triangle.h  TriangleKDNode.h  Vectors.h  VoxelGrid.h
src/: Box.cpp  Mesh.cpp  Triangle.cpp  TriangleKDNode.cpp  VoxelGrid.cpp  main.cpp
tests/: BoxTests.cpp  EigenTests.cpp  MeshTests.cpp  TriangleKDNodeTests.cpp  TriangleTests.cpp  VoxelGridTests.cpp
